<resources>
    <string name="app_name">Tome of Characters</string>

    <!-- Base values -->
    <string name="done">Done</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>

    <!-- No character fragment -->
    <string name="no_character_text">No character selected.\nTry the sidebar to load an existing character or tap below.</string>
    <string name="no_character_create">Create new character</string>
    <string name="no_character_load" >Load previous character:</string>

    <!-- Navigation Bar values  -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_add_character">Add character</string>
    <string name="navigation_drawer_clear_character">Clear current character</string>
    <string name="navigation_drawer_title_characters">Characters</string>

    <!-- Options Menu -->
    <string name="action_settings">Settings</string>
    <string name="action_edit">Edit</string>
    <string name="action_edit_done">Stop editing</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Remove Character</string>
    <string name="action_edit_name">Change Name</string>

    <!-- Character Sheet values -->
    <string name="character_default_name">Character name</string>
    <string name="character_AC_title">Armor Class</string>
    <string name="character_AC_format">AC: %1$d</string>
    <string name="character_HP_title">Hit Points</string>
    <string name="character_HP_format">HP: %1$d/%2$d</string>
    <string name="character_speed_title">Speed</string>
    <string name="character_speed_format">Speed: %1$dft</string>

    <!-- Editing values -->
    <string name="edit_add">Add item</string>
    <string name="edit_default">Edit text</string>
    <string name="divider">/</string>

    <!-- Name values -->
    <string name="name_default">New Character</string>

    <!-- Name edit values -->
    <string name="name_edit_title">Edit name</string>

    <!-- Ability values -->
    <string name="ability_score_STR">STR</string>
    <string name="ability_score_DEX">DEX</string>
    <string name="ability_score_CON">CON</string>
    <string name="ability_score_INT">INT</string>
    <string name="ability_score_WIS">WIS</string>
    <string name="ability_score_CHA">CHA</string>
    <string name="ability_score_value_default">XX(+X)</string>
    <string name="ability_score_value">%1$d (%2$s%3$d)</string>

    <!-- Hit point values -->
    <string name="hit_points_current">Current Hit Points</string>
    <string name="hit_points_max">Max Hit Points</string>

    <!-- Weapon values -->
    <string name="weapon_tag">tag_weapon</string>
    <string name="weapon_default_nickname">Nickname</string>
    <string name="weapon_default_type">WeaponType</string>
    <string name="weapon_default_to_hit">+X</string>
    <string name="weapon_default_damage">XdY + Z type</string>

    <!-- Weapon edit values -->
    <string name="weapon_edit_add">Add Weapon</string>
    <string name="weapon_edit_nickname">Weapon Nickname</string>
    <string name="weapon_edit_type">Weapon type</string>
    <string name="weapon_edit_to_hit">Weapon to hit (+X)</string>
    <string name="weapon_edit_damage">Weapon damage (XdY + Z damageType)</string>

    <!-- Feature values -->
    <string name="feature_tag">tag_feature</string>
    <string name="feature_default_title">Feature title</string>
    <string name="feature_default_description">Feature description</string>
    <string name="feature_default_description_long">Long feature description. This should only be shown when sufficient space is provided for this information, like a multiline field</string>

    <!-- Feature edit values -->
    <string name="feature_edit_add">Add Feature</string>

    <!-- Expendable values -->
    <string name="expendable_tag">tag_expendable</string>
    <string name="expendable_title_placeholder">Expendable title</string>
    <string name="expendable_value_placeholder">10/10</string>
    <string name="expendable_value">%1$d/%2$d</string>

    <!-- Expendable edit values -->
    <string name="expendable_edit_add">Add Expendable</string>

    <!-- Content Descriptions -->
    <string name="content_description_separator">Separator</string>
    <string name="content_description_increase">Increases value</string>
    <string name="content_description_decrease">Decreases value</string>

</resources>
