<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group
        android:id="@+id/action_group">

        <item
            android:enabled="false"
            android:id="@+id/action_edit"
            android:icon="@drawable/ic_mode_edit_white_24dp"
            android:orderInCategory="2"
            android:title="@string/action_edit"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/action_save"
            android:icon="@drawable/ic_save_white_24dp"
            android:orderInCategory="1"
            android:title="@string/action_save"
            android:visible="true"
            app:showAsAction="ifRoom" />

        <item
            android:id="@+id/action_edit_name"
            android:orderInCategory="19"
            android:title="@string/action_edit_name"
            app:showAsAction="never" />

        <item
            android:id="@+id/action_delete"
            android:orderInCategory="20"
            android:title="@string/action_delete"
            app:showAsAction="never" />
    </group>
</menu>
