<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item

            android:id="@+id/nav_add_character"
            android:icon="@drawable/ic_add_circle_outline_black_24dp"
            android:title="@string/navigation_drawer_add_character" />
        <item
            android:id="@+id/nav_clear_character"
            android:icon="@drawable/ic_remove_black_24dp"
            android:title="@string/navigation_drawer_clear_character"
            android:visible="true" />
        <item
            android:id="@+id/nav_create_test_data"
            android:title="Create test data"
            android:visible="@bool/IS_TEST" />
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_character_list"
            android:title="@string/navigation_drawer_title_characters">
            <menu>
                <!-- Characters go here -->
            </menu>
        </item>
    </group>


</menu>
