<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingEnd="@dimen/padding_narrow"
    android:paddingStart="@dimen/padding_narrow">

    <TextView
        android:id="@+id/expendable_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/expendable_value"
        android:layout_centerVertical="true"
        android:text="@string/expendable_title_placeholder"
        android:textStyle="bold"
        android:maxLines="1"
        android:ellipsize="end"/>


    <TextView
        android:id="@+id/expendable_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toStartOf="@+id/expendable_btn_increase"
        android:paddingEnd="@dimen/padding_narrow"
        android:paddingStart="@dimen/padding_narrow"
        android:text="@string/expendable_value_placeholder" />


    <ImageButton
        android:id="@+id/expendable_btn_increase"
        android:layout_width="@dimen/button_width_small"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_gravity="center_vertical"
        android:layout_toStartOf="@+id/expendable_btn_decrease"
        android:contentDescription="@string/content_description_increase"
        android:paddingEnd="@dimen/padding_narrow"
        android:paddingStart="@dimen/padding_narrow"
        android:src="@drawable/ic_add_black_24dp" />

    <ImageButton
        android:id="@+id/expendable_btn_decrease"
        android:layout_width="@dimen/button_width_small"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_gravity="center_vertical"
        android:contentDescription="@string/content_description_decrease"
        android:paddingEnd="@dimen/padding_narrow"
        android:paddingStart="@dimen/padding_narrow"
        android:src="@drawable/ic_remove_black_24dp" />

</RelativeLayout>