<?xml version="1.0" encoding="utf-8"?><!-- Replace merge with RelativeLayout for design purposes -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:descendantFocusability="blocksDescendants"
    tools:parentTag="RelativeLayout">


    <TextView
        android:id="@+id/weapon_display_name"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:ellipsize="end"
        android:lines="1"
        android:text="@string/weapon_default_nickname"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/weapon_to_hit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@+id/weapon_display_name"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:text="@string/weapon_default_to_hit" />


    <TextView
        android:id="@+id/weapon_damage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_toEndOf="@+id/weapon_to_hit"
        android:ellipsize="end"
        android:lines="1"
        android:text="@string/weapon_default_damage"
        android:textAlignment="textEnd"
        tools:text="XdY piercing + 2d6 fire" />
</RelativeLayout>