<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/BasePadding"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="be.sanderdecleer.dndapp.fragments.NoCharacter">


    <TextView
        android:id="@+id/no_character_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/activity_horizontal_margin"
        android:text="@string/no_character_text"
        android:layout_marginTop="150dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />


    <Button
        android:id="@+id/no_character_create"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/no_character_description"
        android:layout_centerHorizontal="true"
        android:text="@string/no_character_create" />

    <TextView
        android:id="@+id/load_character_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/no_character_create"
        android:layout_centerHorizontal="true"
        android:text="@string/no_character_load" />

    <!-- TODO: what if a massive amount of characters are present -->
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/no_character_load"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/load_character_title"
        android:layout_centerHorizontal="true"
        android:gravity="center">
        <!--<Button-->
        <!--style="@style/Base.Widget.AppCompat.Button.Borderless"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="CHARACTERNAME" />-->

    </LinearLayout>

</RelativeLayout>
